--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     src="assets/asset.jpeg"
                     scale="1 1 1"
                     class="clickable"
+                    scale="2 2 2"
                     rotation="-90 0 0"
                     gesture-handler
                 ></a-image>
